# jacana

./: .gitignore  Cargo.toml  README.md  config.json  justfile  status  uuid
migrations/: 20250916153825_add_token_table.sql  20250916191403_add_accounts.sql  20250916195945_add_transactions.sql  README.md
scripts/: create_schema.sql  drop_schema.sql
src/: config.rs  geyser_plugin_postgres.rs  lib.rs  metrics.rs  plugin.rs  postgres_client.rs
src/clickhouse/: buffer.rs  mod.rs  pool.rs
src/filters/: accounts.rs  transactions.rs
src/postgres_client/: postgres_client_block_metadata.rs  postgres_client_transaction.rs
src/workers/: account.rs  block.rs  consts.rs  mod.rs  slot.rs  transaction.rs
