[package]
authors = ["JK <jk@example.com>"]
edition = "2021"
name = "jacana"
description = "A high throughput memory efficient solana indexer using ClickHouse as the data store."
version = "0.1.0"
repository = "https://github.com/mip404/jacana"
license = "Apache-2.0"
homepage = "example.com"
documentation = "https://github.com/mip404/jacana"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = "3.0.5"
async-trait = "0.1.89"
bs58 = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
clickhouse-arrow = { version = "0.1.6", features = ["pool", "derive"] }
futures-util = "0.3.31"
kanal = "0.1.1"
log = "0.4.28"
once_cell = "1.21.3"
serde = "1.0.225"
serde_json = "1.0.145"
solana-logger = "3.0.0"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-transaction = "3.0.1"
solana-transaction-status = "3.0.5"
thiserror = "2.0.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
tempfile = "3.22.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]